--- a/style.css
+++ b/style.css
@@ -1,4 +1,49 @@
+
 body {
-    background-color: cyan;
+    background-color: antiquewhite;
 }
-.head {text-align: center;}
+
+
+.background {
+    background-color: blanchedalmond;
+    background-image: url(Img/gridoffset-videogames-1-1585583517.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    color: red;
+    height: 30vh;
+    position: relative;
+}
+
+
+.top3 {
+    transform: translate(-50%, -50%);
+    position: absolute;
+    left: 50%
+}
+
+
+
+
+
+
+
+
+.Pkmn2 {
+    background-image: url(Img/pokemon.gif);
+    background-position: center;
+    background-size: cover;
+    margin: 60px 30px;
+    border: 5px solid blue;
+    width: 20vw;
+}
+
+
+.Pkmn {
+    margin: 50px 25px 50px 25px;
+width:25vw;
+left: 45px;
+position: relative;
+}
+
+
+
