--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
-
 body {
     background-color: antiquewhite;
+    font-family: 'Coming Soon', cursive;
 }
-
 
 .background {
     background-color: blanchedalmond;
@@ -12,38 +11,116 @@ body {
     color: red;
     height: 30vh;
     position: relative;
+    font-size: x-large;
+    font-weight: bold;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #f400aa
 }
-
 
 .top3 {
     transform: translate(-50%, -50%);
+    margin-top: 100px;
     position: absolute;
     left: 50%
 }
 
-
-
-
-
-
-
-
 .Pkmn2 {
     background-image: url(Img/pokemon.gif);
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    margin: 60px 30px;
+    margin-top: 50px;
     border: 5px solid blue;
     width: 20vw;
+    height: 60px;
+    position: relative;
 }
-
 
 .Pkmn {
-    margin: 50px 25px 50px 25px;
-width:25vw;
-left: 45px;
-position: relative;
+    left: 75px;
+    top: -100%;
+    position: absolute;
+}
+
+.knowledge {
+    margin: 5px 10px;
+    font-size: medium;
+    width: 400;
+    top: 90px;
+    position: absolute;
+}
+
+.minecraft {
+    background-image: url(Img/MC.png);
+    background-position: center;
+    background-size: cover;
+    border: 5px solid blue;
+    width: 20vw;
+    margin-top: 200px;
+    position: relative;
+    height: 95px;
+    left: 550px;
+    bottom: 285px;
+}
+
+.mc {
+    left: 50%;
+    translate: -50% -50%;
+    color: black;
+    position: absolute;
+    top: -40%;
+    padding: 20px 51px;
+}
+
+.mcknowledge {
+    font-size: small;
+    position: absolute;
+    top: 100px;
+    width: 400;
+    margin-left: -40px;
+}
+
+.Eldens {background-image: url(Img/elden-ring-990x556.png);
+    background-position: center;
+    background-size: cover;
+    border: 5px solid blue;
+    width: 20vw;
+    margin-top: 200px;
+    position: relative;
+    height: 135px;
+    left: 1050px;
+    bottom: 590;
+}
+
+.Elden {
+    position: absolute;
+    left: 25%;
+    width: 115px;
+    bottom: 113px
+
 }
 
 
 
+.EldenKnowledge {
+    font-size: small;
+    position: absolute;
+    top: 135px;
+    width: 400;
+    margin-left: -40px;
+}
+
+.DISCLAIMERS {
+    background-image: url(Img/Oops.gif);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    height: 30vh;
+    width: 30vw;
+}
+.disclaimer {
+    font-size: large;
+    position: absolute;
+    top: -65px
+
+}
